[package]
name = "starter-cli"
version = "0.7.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
starter-web = { path = "../web", version = "0.7.0" }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
clap = "4.5.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
