[package]
name = "starter-feed"
version = "0.7.0"
edition = "2021"
license = "AGPL-3.0"
description = "Feed module for timada starter"
repository = "https://github.com/timayz/starter"
homepage = "https://timada.co"

[dependencies]
evento = { version = "0.10.2", features = ["pg"] }
evento-query = { version = "0.10.2", features = ["pg"] }
anyhow = "1.0.81"
ulid = "1.1.2"
parse-display = "0.9.0"
serde = "1.0.197"
validator = { version = "0.17.0", features = ["derive"] }
tracing = "0.1.40"
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json" ] }
chrono = { version = "0.4.35", default-features = false, features = ["clock", "serde"] }
fake = "2.9.2"
rand = "0.8.5"
async-trait = "0.1.79"

[dependencies.uuid]
version = "1.8.0"
features = [
	"v4",
	"fast-rng",
	"macro-diagnostics",
]

[dev-dependencies]
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "any"] }
futures-util = "0.3.30"
once_cell = "1.19.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
